Changes
=======

All issue numbers are relative to https://github.com/Toblerity/Fiona/issues.

1.01a2 (TBD)
------------

Bug fixes:

- The legacy crs.py module which was shadowed by the new crs.pyx module has
  been deleted (#1344).
- Python 3.8 has been added back to the list of supported versions and
  a dependency on Numpy added in 1.10a1 has been removed.
- An implementation of the VSI flush callback has been added to _vsiopener.pyx.
- Openers are now registered only by urlpath. The mode is no longer considered
  as OGR drivers may use a mix of modes when creating a new dataset.

1.10a1 (2024-03-01)
-------------------

Python version:

Fiona 1.10 will be compatible with Numpy versions 1 and 2 and will require
Python version 3.9 or higher.

Deprecations:

The fiona.path module will be removed in version 2.0 and a deprecation warning
is issued when the module is imported (#1334). Additionally, members of that
module are no longer exported from the top level module.

New features:

Python openers can now support discovery of auxiliary "sidecar" files like
.aux.xml, .msk, and .tfw files for GeoTIFFs (#1331). Additionally, filesystem
objects, such as those from fsspec, can be used as openers. This will become
the recommended usage, supplanting the use of single file openers.

Bug fixes:

- Use of pkg_resources in test_rio_info.py has been eliminated.
- gzip, tar, and zip archive URIs containing drive letters were not always
  parsed properly on Windows, but are now (#1334).

1.9.6 (2024-03-07)
------------------

- Ensure that geometry types in a schema are translated to a linear type, as
  geometry instances are (#1313).
- Fix broken stable API documentation on Read The Docs (#).
- Remove install requirement of setuptools, a regression introduced in 1.9.5.

1.9.5 (2023-10-11)
------------------

Bug fixes:

- Expand keys in schema mismatch exception, resolving #1278.
- Preserve the null properties and geometry of a Feature when serializing
  (#1276).

Packaging:
